<resources>
    <string name="app_name">SocialNetwork</string>
    <string name="splash_text_view">Social Network Name here</string>
    <string name="e_mail">e-mail</string>
    <string name="password">пароль</string>
    <string name="enter">войти</string>
    <string name="register">зарегистрироваться</string>
    <string name="warning">внимание</string>
    <string name="login_empty_fileds_dialog_message">необходимо заполнить все поля</string>
    <string name="ok">ок</string>
    <string name="name">имя</string>
    <string name="surname">фамилия</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
