<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mw2c.pipboy200011.socialnetwork.presentation.ui.LoginActivity">

    <ImageView
        android:id="@+id/login_image_view"
        android:layout_width="@dimen/size_100_dp"
        android:layout_height="@dimen/size_100_dp"
        android:layout_marginTop="@dimen/size_72_dp"
        android:contentDescription="@null"
        android:src="@mipmap/splash_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:id="@+id/login_enter_container"
        android:layout_width="@dimen/size_0_dp"
        android:layout_height="@dimen/size_100_dp"
        android:layout_marginLeft="@dimen/size_56_dp"
        android:layout_marginRight="@dimen/size_56_dp"
        android:background="@color/login_container_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_image_view">

        <EditText
            android:id="@+id/login_mail_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </FrameLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_56_dp"
        android:layout_marginRight="@dimen/size_56_dp"
        android:layout_marginTop="@dimen/size_8_dp"
        android:text="@string/enter"
        app:layout_constraintTop_toBottomOf="@id/login_enter_container"/>

    <TextView
        android:id="@+id/login_registration_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16_dp"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"/>

</android.support.constraint.ConstraintLayout>
